[package]
name = "isimud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
axum = { version = "0.6.4", features = ["ws", "headers"] }
dotenvy = "0.15.6"
futures = "0.3.25"
headers = "0.3.8"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
strmatch = "0.1.0"
tokio = { version = "1.25.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.3.5", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
